2011-10-13  Peter Bloomfield

	* src/pref-manager.c (attach_entry), (attach_entry_full),
	(attach_information_menu), (attach_label), (checking_group),
	(quoted_group), (broken_8bit_codeset_group), (mdn_group),
	(word_wrap_group), (other_options_group), (main_window_group),
	(display_formats_group), (information_messages_group),
	(attach_font_button), (preview_font_group), (create_grid),
	(message_window_group): migrate from GtkTable to GtkGrid.

2011-10-06  Peter Bloomfield

	* src/main-window.c: migrate from GtkTable to GtkGrid.

2011-10-06  Peter Bloomfield

	* src/mailbox-conf.c (balsa_server_conf_get_advanced_widget),
	(balsa_server_conf_add_checkbox), (balsa_server_conf_add_spinner),
	(create_local_mailbox_dialog), (create_pop_mailbox_dialog),
	(create_imap_mailbox_dialog), (mailbox_conf_view_new_full),
	(mailbox_conf_view_new): migrate from GtkTable to GtkGrid.
	* src/mailbox-conf.h: ditto.

2011-10-06  Peter Bloomfield

	* src/folder-conf.c (folder_conf_imap_node),
	(folder_conf_imap_sub_node): migrate from GtkTable to GtkGrid.

2011-10-06  Peter Bloomfield

	* src/filter-edit-dialog.c (build_match_page),
	(fe_make_color_buttons), (build_action_page),
	(build_right_side): migrate from GtkTable to GtkGrid.

2011-10-06  Peter Bloomfield

	* src/filter-edit-callbacks.c (build_type_notebook): add a
	margin to notebook pages.

2011-10-06  Peter Bloomfield

	* src/filter-edit-callbacks.c (add_button), (add_check),
	(get_field_frame), (build_type_notebook): migrate from GtkTable
	to GtkGrid.

2011-10-05  Peter Bloomfield

	* src/balsa-mime-widget-vcalendar.c (balsa_vevent_widget):
	migrate from GtkTable to GtkGrid.

2011-10-05  Peter Bloomfield

	* src/address-book-config.c (create_gpe_dialog): build with GPE
	address book.

2011-10-05  Peter Bloomfield

	* src/balsa-mime-widget-text.c (bm_widget_new_vcard): make
	button span two columns, and left-align labels instead of right.

2011-10-04  Peter Bloomfield
